--- a/src/componentes/ItemDetail.css
+++ b/src/componentes/ItemDetail.css
@@ -1,200 +1,84 @@
-@import url('https://fonts.googleapis.com/css?family=Fjalla+One|Montserrat:300,400,700,800|Open+Sans:300');
+.detail-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
 
+.detail-card {
+  width: 500px;
+  background: #ffffffea;
+  box-shadow: 0 2px 7px #373737;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: 0.5s;
+}
 
-.card{
-  box-shadow: 0 6px 6px rgba(#000, 0.3);
-  transition: 200ms;
-  background: #fff;
-  
-  .card__title{
-    display: flex;
-    align-items: center;
-    padding: 30px 40px;
-    
-    h3{
-      flex: 0 1 200px;
-      text-align: right;
-      margin: 0;
-      color: #252525;
-      font-family: sans-serif;
-      font-weight: 600;
-      font-size: 20px;
-      text-transform: uppercase;
-    }
-    
-    .icon{
-      flex: 1 0 10px;
-      background: #115dd8;
-      color: #fff;
-      padding: 10px 10px;
-      transition: 200ms;
-      
-      > a{
-        color: #fff;
-      }
-      
-      &:hover{
-        background: #252525;
-      }
-    }
-  }
-  
-  .card__body{
-    padding: 0 40px;
-    display: flex;
-    flex-flow: row no-wrap;
-    margin-bottom: 25px;
-    
-    > .half{
-      box-sizing: border-box;
-      padding: 0 15px;
-      flex: 1 0 50%;
-    }
-    
-    .featured_text{
-      h1{
-        margin: 0;
-        padding: 0;
-        font-weight: 800;
-        font-family: "Montserrat", sans-serif;
-        font-size: 64px;
-        line-height: 50px;
-        color: #181e28;
-      }
-      
-      p{
-        margin: 0;
-        padding: 0;
-        
-        &.sub{
-          font-family: "Montserrat", sans-serif;
-          font-size: 26px;
-          text-transform: uppercase;
-          color: #686e77;
-          font-weight: 300;
-          margin-bottom: 5px;
-        }
-        
-        &.price{
-          font-family: "Fjalla One", sans-serif;
-          color: #252525;
-          font-size: 26px;
-        }
-      }
-    }
-    
-    .image{
-      padding-top: 15px;
-      width: 100%;
-      
-      img{
-        display: block;
-        max-width: 100%;
-        height: auto;
-      }
-    }
-    
-    .description{
-      margin-bottom: 25px;
-      
-      p{
-        margin: 0;
-        font-family: "Open Sans", sans-serif;
-        font-weight: 300;
-        line-height: 27px;
-        font-size: 16px;
-        color: #555;
-      }
-    }
-    
-    span.stock{
-      font-family: "Montserrat", sans-serif;
-      font-weight: 600;
-      color: #a1cc16;
-    }
-    
-    .reviews{
-      .stars{
-        display: inline-block;
-        list-style: none;
-        padding: 0;
-        
-        > li{
-          display: inline-block;
-          
-          .fa{
-            color: #f7c01b;
-          }
-        }
-      }
-      
-      > span{
-        font-family: "Open Sans", sans-serif;
-        font-size: 14px;
-        margin-left: 5px;
-        color: #555;
-      }
-    }
-  }
-  
-  .card__footer{
-    padding: 30px 40px;
-    display: flex;
-    flex-flow: row no-wrap;
-    align-items: center;
-    position: relative;
-    
-    &::before{
-      content: "";
-      position: absolute;
-      display: block;
-      top: 0;
-      left: 40px;
-      width: calc(100% - 40px);
-      height: 3px;
-      background: #115dd8;
-      background: linear-gradient(to right, #115dd8 0%,#115dd8 20%,#ddd 20%,#ddd 100%);
-    }
-    
-    .recommend{
-      flex: 1 0 10px;
-      
-      p{
-        margin: 0;
-        font-family: "Montserrat", sans-serif;
-        text-transform: uppercase;
-        font-weight: 600;
-        font-size: 14px;
-        color: #555;
-      }
-     
-      h3{
-        margin: 0;
-        font-size: 20px;
-        font-family: "Montserrat", sans-serif;
-        font-weight: 600;
-        text-transform: uppercase;
-        color: #115dd8;
-      }
-    }
-    
-    .action{
-      button{
-        cursor: pointer;
-        border: 1px solid #115dd8;
-        padding: 14px 30px;
-        border-radius: 200px;
-        color: #fff;
-        background: #115dd8;
-        font-family: "Open Sans", sans-serif;
-        font-size: 16px;
-        transition: 200ms;
-        
-        &:hover{
-          background: #fff;
-          color: #115dd8;
-        }
-      }
-    }
-  }
+.detail-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 350px;
+  background: #ffffff;
+}
+
+.detail-image img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.detail-content {
+  padding: 30px;
+}
+
+.detail-category {
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #929292;
+  margin-bottom: 10px;
+  display: block;
+}
+
+.detail-title {
+  font-size: 22px;
+  font-weight: bold;
+  color: #fbb72c;
+  margin-bottom: 15px;
+}
+
+.detail-description {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #555;
+  margin-bottom: 20px;
+}
+
+.detail-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid #eee;
+  padding-top: 15px;
+}
+
+.detail-price {
+  font-size: 22px;
+  font-weight: bold;
+  color: #fbb72c;
+}
+
+.detail-button {
+  background-color: #e1e1e1;
+  color: #373737;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.detail-button:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
